# agentic-threat-hunting-framework

./: .coveragerc  .flake8  .gitignore  .markdown-link-check.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  SHOWCASE.md  USING_ATHF.md  athf-demo.cast  environment.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vulnerabilities.md
assets/: VISUAL_ASSETS_TODO.md
athf/: __version__.py  cli.py
docs/: CHANGELOG.md  CLI_REFERENCE.md  getting-started.md  level3-mcp-examples.md  level4-agentic-workflows.md  lock-pattern.md  maturity-model.md
hunts/: FORMAT_GUIDELINES.md  H-0001.md  H-0002.md  H-0003-executive.md  H-0003.md  README.md
integrations/: MCP_CATALOG.md  README.md
knowledge/: hunting-knowledge.md
memory/: README.md
prompts/: README.md  ai-workflow.md  basic-prompts.md  hypothesis-generator-v2.md  workflow-guide.md
scripts/: BLOG_POST_GIF.md  RECORDING_AI_SEARCH.md  RECORDING_CLI_WORKFLOW.md  RECORDING_GUIDE.md  RECORDING_LEVEL1_DEMO.md  RECORDING_MATURITY_LEVELS.md  demo-ai-search-exfiltration.sh  demo-cli-workflow.sh  demo-level0-adhoc.sh  demo-level1.sh  demo-level2-searchable.sh  demo-level3-generative.sh  demo-level4-agentic.sh  record-demo.sh
templates/: HUNT_EXECUTION.md  HUNT_HYPOTHESIS.md  HUNT_LOCK.md  QUERY.spl
testing/: README.md  TEST-SUMMARY.md  TESTING.md  test-fresh-install.sh  test-local.sh  test-quick.sh
tests/: __init__.py  conftest.py  test_commands.py  (+2 more)
tools/mcp/: CHANGELOG.md  IMPLEMENTATION_NOTES.md  QUICKSTART.md  README.md  hunt_mcp_server.py  pyproject.toml  setup.sh
(+19 files in other folders)
