[project]
name = "athf-hunt-server"
version = "0.1.0"
description = "Agentic Threat Hunting Framework - MCP Server for hypothesis generation"
authors = [{name = "ATHF Contributors"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
